# circle-stdlib

./: .clang-format  .gitmodules  CHANGELOG.md  Makefile  README.md  build-libc++.sh  configure
.forgejo/workflows/: smoketest-clang.yaml  smoketest-libcxx.yaml  smoketest.yaml
cmake/caches/: circle-newlib-aarch64-none-circle.cmake  circle-newlib-arm-none-circle.cmake  circle-newlib-common.cmake  circle-newlib.cmake
cmake/libcxx-fetch/: CMakeLists.txt
cmake/patches/: libcxx-random-backend-guard.patch
cmake/toolchains/: toolchain-aarch64-none-circle-clang.cmake  toolchain-aarch64-none-circle.cmake  toolchain-arm-none-circle-clang.cmake  toolchain-arm-none-circle.cmake  toolchain.cmake
docker/aarch64/: docker-compose.yml
docker/aarch64/base/: Dockerfile
docker/aarch64/clang22/: Dockerfile
docker/aarch64/compilers/: Dockerfile
docker/aarch64/gcc14/: Dockerfile
docker/aarch64/gcc15/: Dockerfile
docker/x64/: docker-compose.yml
docker/x64/base/: Dockerfile
docker/x64/clang22/: Dockerfile
docker/x64/compilers/: Dockerfile
docker/x64/gcc14/: Dockerfile
docker/x64/gcc15/: Dockerfile
include/: circle_stdlib_app.h
install/: .gitignore
libs/libcxx-support/: CMakeLists.txt
libs/libcxx-support/src/: string.cpp  wstring.cpp
libs/libcxx-threading/: CMakeLists.txt
libs/libcxx-threading/include/: __external_threading
libs/libcxx-threading/src/: condvar.cpp  mutex.cpp  mutex_impl.h  thread.cpp
samples/01-nosys/: Makefile
samples/04-std/: Makefile  kernel.cpp
samples/05-smoketest/: Makefile  kernel.cpp
samples/06-socket/: Makefile
samples/07-libc++-kasan/: README.md  kernel.cpp  kernel.h  main.cpp
samples/08-kasan/: kernel.cpp  kernel.h  main.cpp
tests/01-basic-socket/: main.cpp
tests/02-basic-socket-mux/: main.cpp  testserver.py
tests/03-pipe/: Makefile  main.cpp  run_test.sh
tests/04-netdb/: Makefile  main.cpp
tests/06-basic-thread/: main.cpp
tests/06-filesystem/: Makefile  main.cpp
tests/lib/: Makefile  Makefile.test.inc
